added GLGeometry package to path
git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@65 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/test/Makefile
+++ b/test/Makefile
@@ -17,7 +17,8 @@ PYVER=$(shell python -c "import sys ; print sys.version[:3]")
 #BPATH=../build/lib.$(PYPLAT)-$(PYVER)
 #BPATH=../build/lib
 BPATH=../src
-PYTHON = PYTHONPATH=$(BPATH) python #-v
+GLGEOMETRY_DIR=/data/tmp/hoel/GLGeometry
+PYTHON = PYTHONPATH=$(BPATH):$(GLGEOMETRY_DIR)/src python #-v
 
 PYBASE = ../src
 UTESTS = $(subst /,.,$(subst $(PYBASE)/,,$(patsubst %.py,%_test,$(PY))))
