Generating poygons from circle information is now factored out to the `GLGeometry` package. It now uses an algotithm to get the number of required nodes in the resulting polygon that is depending of the radius/curvature of the arc to be generated.
git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@67 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/test/Makefile
+++ b/test/Makefile
@@ -14,7 +14,7 @@ SHELL = /bin/sh
 PYPLAT=$(shell python -c "from distutils import util; print util.get_platform()")
 PYVER=$(shell python -c "import sys ; print sys.version[:3]")
 
-USE_COMPILED=1
+USE_COMPILED=0
 
 ifeq ($(USE_COMPILED),1)
   export BASE_PATH=../src/tribon
@@ -27,13 +27,12 @@ GLGEOMETRY_PATH=$(GLGEOMETRY_DIR)/build/lib:$(GLGEOMETRY_DIR)/build/lib.$(PYPLAT
 PYTHON = PYTHONPATH=$(BPATH):$(GLGEOMETRY_PATH) python #-v
 
 PYBASE = ../src
+PY = $(shell $(FINDDIR)find $(PYBASE) -name \*.py -not -name .\#\* -and -not -name config.py )
 UTESTS = $(subst /,.,$(subst $(PYBASE)/,,$(patsubst %.py,%_test,$(PY))))
 
 ifeq ("$GL_ARCH","")
 FINDDIR=/bin/
 endif
-
-PY = $(shell $(FINDDIR)find ../src -name \*.py -not -name .\#\* -and -not -name config.py )
 
 AKER_DIR=../data/Aker
 
