fixed default make target
git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@74 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/test/Makefile
+++ b/test/Makefile
@@ -79,6 +79,6 @@ vpath %.py $(shell $(FINDDIR)find ../src -type d|grep -v .svn)
 # mode:makefile
 # mode:flyspell
 # ispell-local-dictionary:"en"
-# compile-command:"make"
+# compile-command:"make test"
 # coding:utf-8
 # End:
