cleared out references to tribon and hcm modules
git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@78 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/test/Makefile
+++ b/test/Makefile
@@ -22,12 +22,8 @@ ifeq ($(USE_COMPILED),1)
 else
   BPATH=../src
 endif
-GLGEOMETRY_DIR=/data/tmp/hoel/GLGeometry
-GLGEOMETRY_PATH=$(GLGEOMETRY_DIR)/build/lib:$(GLGEOMETRY_DIR)/build/lib.$(PYPLAT)-$(PYVER)
-TRIBON_DIR=/data/tmp/hoel/tribonXML_convert
-TRIBON_PATH=$(TRIBON_DIR)/build/lib:$(TRIBON_DIR)/build/lib.$(PYPLAT)-$(PYVER)
 
-PYTHON = PYTHONPATH=$(BPATH):$(GLGEOMETRY_PATH):$(TRIBON_PATH) python #-v
+PYTHON = PYTHONPATH=$(BPATH) python #-v
 
 PYBASE = ../src
 PY = $(shell $(FINDDIR)find $(PYBASE) -name \*.py -not -name .\#\* -and -not -name config.py )
