Renamed `glframework` to `dnvgl_framework`.
git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@95 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/test/Makefile
+++ b/test/Makefile
@@ -51,7 +51,7 @@ test_all:	test	$(BIG_TESTS)
 build:
 	make -C .. build
 
-PYTESTPATH=../src/glframework
+PYTESTPATH=../src/dnvgl_framework
 GEN_COV=--cov-config .coveragerc --cov $(PYTESTPATH)    \
   --cov-report term-missing --cov-report html           \
   --cov-report xml --cov-report annotate
