--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,7 +1,7 @@
-# Copyright (C) 2010 by Germanischer Lloyd SE
+# Copyright (C) 2010 by DNV GL SE
 
 # ======================================================================
-# Task      Generate documentation for GLPyFramework.
+# Task      Generate documentation for DNVGLPyFramework.
 #           Makefile for Sphinx documentation
 # ----------------------------------------------------------------------
 # Author    Berthold Höllmann <hoel@GL-Group.com>
@@ -13,22 +13,24 @@
 SHELL = /bin/sh
 
 DOC_HOST=www-intern
-DOC_DIR=/export/WWW-Intern/htdocs/pool/ho/software/info/GLPyFramwork
+DOC_DIR=/export/WWW-Intern/htdocs/pool/ho/software/info/DNVGLPyFramwork
 
 # You can set these variables from the command line.
-SPHINXOPTS    =
+SPHINXOPTS    = -w sphinx-build.log
 SPHINXBUILD   = sphinx-build
-PAPER         =
+PAPER         = a4
 BUILDDIR      = _build
 
 # Internal variables.
 PAPEROPT_a4     = -D latex_paper_size=a4
 PAPEROPT_letter = -D latex_paper_size=letter
 ALLSPHINXOPTS   = -d $(BUILDDIR)/doctrees $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) .
+# the i18n builder cannot share the environment and doctrees with the others
+I18NSPHINXOPTS  = $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) .
+
+export LATEXOPTS=--shell-escape
 
 export PYTHONPATH=../../GLGeometry/src:../../tribonXML_convert/src:
-
-.PHONY: help clean html dirhtml singlehtml pickle json htmlhelp qthelp devhelp epub latex latexpdf text man changes linkcheck doctest
 
 help:
 	@echo "Please use \`make <target>' where <target> is one of"
@@ -45,6 +47,9 @@ help:
 	@echo "  latexpdf   to make LaTeX files and run them through pdflatex"
 	@echo "  text       to make text files"
 	@echo "  man        to make manual pages"
+	@echo "  texinfo    to make Texinfo files"
+	@echo "  info       to make Texinfo files and run them through makeinfo"
+	@echo "  gettext    to make PO message catalogs"
 	@echo "  changes    to make an overview of all changed/added/deprecated items"
 	@echo "  linkcheck  to check all external links for integrity"
 	@echo "  doctest    to run all doctests embedded in the documentation (if enabled)"
@@ -52,7 +57,7 @@ help:
 clean:
 	-rm -rf $(BUILDDIR)/*
 
-html:	epydoc_html
+html:
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
 	@echo
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
@@ -88,17 +93,17 @@ qthelp:
 	@echo
 	@echo "Build finished; now you can run "qcollectiongenerator" with the" \
 	      ".qhcp project file in $(BUILDDIR)/qthelp, like this:"
-	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/GLGeometry.qhcp"
+	@echo "# qcollectiongenerator $(BUILDDIR)/qthelp/DNVGLPyFramework.qhcp"
 	@echo "To view the help file:"
-	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/GLGeometry.qhc"
+	@echo "# assistant -collectionFile $(BUILDDIR)/qthelp/DNVGLPyFramework.qhc"
 
 devhelp:
 	$(SPHINXBUILD) -b devhelp $(ALLSPHINXOPTS) $(BUILDDIR)/devhelp
 	@echo
 	@echo "Build finished."
 	@echo "To view the help file:"
-	@echo "# mkdir -p $$HOME/.local/share/devhelp/GLGeometry"
-	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/GLGeometry"
+	@echo "# mkdir -p $$HOME/.local/share/devhelp/DNVGLPyFramework"
+	@echo "# ln -s $(BUILDDIR)/devhelp $$HOME/.local/share/devhelp/DNVGLPyFramework"
 	@echo "# devhelp"
 
 epub:
@@ -106,14 +111,14 @@ epub:
 	@echo
 	@echo "Build finished. The epub file is in $(BUILDDIR)/epub."
 
-latex:	epydoc_latex
+latex:
 	$(SPHINXBUILD) -b latex $(ALLSPHINXOPTS) $(BUILDDIR)/latex
 	@echo
 	@echo "Build finished; the LaTeX files are in $(BUILDDIR)/latex."
 	@echo "Run \`make' in that directory to run these through (pdf)latex" \
 	      "(use \`make latexpdf' here to do that automatically)."
 
-latexpdf:	epydoc_latex
+latexpdf:
 	$(SPHINXBUILD) -b latex $(ALLSPHINXOPTS) $(BUILDDIR)/latex
 	@echo "Running LaTeX files through pdflatex..."
 	make -C $(BUILDDIR)/latex all-pdf
@@ -128,6 +133,24 @@ man:
 	$(SPHINXBUILD) -b man $(ALLSPHINXOPTS) $(BUILDDIR)/man
 	@echo
 	@echo "Build finished. The manual pages are in $(BUILDDIR)/man."
+
+texinfo:
+	$(SPHINXBUILD) -b texinfo $(ALLSPHINXOPTS) $(BUILDDIR)/texinfo
+	@echo
+	@echo "Build finished. The Texinfo files are in $(BUILDDIR)/texinfo."
+	@echo "Run \`make' in that directory to run these through makeinfo" \
+	      "(use \`make info' here to do that automatically)."
+
+info:
+	$(SPHINXBUILD) -b texinfo $(ALLSPHINXOPTS) $(BUILDDIR)/texinfo
+	@echo "Running Texinfo files through makeinfo..."
+	make -C $(BUILDDIR)/texinfo info
+	@echo "makeinfo finished; the Info files are in $(BUILDDIR)/texinfo."
+
+gettext:
+	$(SPHINXBUILD) -b gettext $(I18NSPHINXOPTS) $(BUILDDIR)/locale
+	@echo
+	@echo "Build finished. The message catalogs are in $(BUILDDIR)/locale."
 
 changes:
 	$(SPHINXBUILD) -b changes $(ALLSPHINXOPTS) $(BUILDDIR)/changes
@@ -145,18 +168,28 @@ doctest:
 	@echo "Testing of doctests in the sources finished, look at the " \
 	      "results in $(BUILDDIR)/doctest/output.txt."
 
-epydoc_html:
-	[ -d $(BUILDDIR)/html/api ] || mkdir -p $(BUILDDIR)/html/api
-	epydoc -o $(BUILDDIR)/html/api --html --verbose ../src/glframework
-
-epydoc_latex:
-	[ -d $(BUILDDIR)/latex/api ] || mkdir -p $(BUILDDIR)/html/api
-	epydoc -o $(BUILDDIR)/html/api --latex --verbose ../src/glframework
+.PHONY: help
+.PHONY: clean
+.PHONY: html
+.PHONY: dirhtml
+.PHONY: singlehtml
+.PHONY: pickle
+.PHONY: json
+.PHONY: htmlhelp
+.PHONY: qthelp
+.PHONY: devhelp
+.PHONY: epub
+.PHONY: latex
+.PHONY: latexpdf
+.PHONY: text
+.PHONY: man
+.PHONY: changes
+.PHONY: linkcheck
+.PHONY: doctest
 
 # Local Variables:
-# mode:makefile
-# mode:flyspell
-# ispell-local-dictionary:"en"
-# compile-command:"make html"
-# coding:utf-8
+# mode: makefile
+# ispell-local-dictionary: "english"
+# compile-command: "make html"
+# coding: utf-8
 # End:
