--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,19 @@ commands =
          --cov-report annotate --doctest-modules --capture=sys \
          --junitxml=pytest_main.xml {envsitepackagesdir}/dnvgl_framework \
          --pep8 {posargs}
+
+[testenv:py33]
+
+; `--pep8` failes with `2to3` converted code.
+commands =
+      {envpython} setup.py build_ext
+      py.test --cov-config .coveragerc --cov {envsitepackagesdir}/readais \
+         --cov-report term-missing --cov-report html --cov-report xml \
+         --cov-report annotate --doctest-modules --capture=sys \
+         --junitxml=pytest_main.xml app \
+         {envsitepackagesdir}/readais {posargs}
+      {envpython} setup.py bdist_egg
+
 deps =
     py
     pytest
