--- a/tox.ini
+++ b/tox.ini
@@ -14,6 +14,13 @@ commands =
          --junitxml=pytest_main.xml {envsitepackagesdir}/dnvgl_framework \
          --pep8 {posargs}
 
+deps =
+    py
+    pytest
+    pytest-cov
+    pytest-capturelog
+    pytest-pep8
+
 [testenv:py33]
 
 ; `--pep8` failes with `2to3` converted code.
@@ -27,8 +34,4 @@ commands =
       {envpython} setup.py bdist_egg
 
 deps =
-    py
-    pytest
-    pytest-cov
-    pytest-capturelog
-    pytest-pep8
+    {[testenv]deps}
