Trying to fix Jenkins build.
git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@100 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/tox.ini
+++ b/tox.ini
@@ -4,11 +4,18 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27, py33
+
+envlist = py27,py33,py34
+
+skip_missing_interpreters = True
+
+indexserver =
+    default = http://srverc.germanlloyd.org/devpi/root/pypi/+simple
 
 [testenv]
+
 commands =
-      py.test --cov-config .coveragerc --cov {envsitepackagesdir}/dnvgl_framework \
+    py.test --cov-config .coveragerc --cov {envsitepackagesdir}/dnvgl_framework \
          --cov-report term-missing --cov-report html --cov-report xml \
          --cov-report annotate --doctest-modules --capture=sys \
          --junitxml=pytest_main.xml {envsitepackagesdir}/dnvgl_framework \
@@ -25,13 +32,11 @@ deps =
 
 ; `--pep8` failes with `2to3` converted code.
 commands =
-      {envpython} setup.py build_ext
-      py.test --cov-config .coveragerc --cov {envsitepackagesdir}/readais \
+    py.test --cov-config .coveragerc --cov {envsitepackagesdir}/dnvgl_framework \
          --cov-report term-missing --cov-report html --cov-report xml \
          --cov-report annotate --doctest-modules --capture=sys \
          --junitxml=pytest_main.xml app \
-         {envsitepackagesdir}/readais {posargs}
-      {envpython} setup.py bdist_egg
+         {envsitepackagesdir}/dnvgl_framework {posargs}
 
 deps =
     {[testenv]deps}
