--- a/tox.ini
+++ b/tox.ini
@@ -35,8 +35,8 @@ commands =
     py.test --cov-config .coveragerc --cov {envsitepackagesdir}/dnvgl_framework \
          --cov-report term-missing --cov-report html --cov-report xml \
          --cov-report annotate --doctest-modules --capture=sys \
-         --junitxml=pytest_main.xml app \
-         {envsitepackagesdir}/dnvgl_framework {posargs}
+         --junitxml=pytest_main.xml {envsitepackagesdir}/dnvgl_framework \
+         {posargs}
 
 deps =
     {[testenv]deps}
