--- a/tox.ini
+++ b/tox.ini
@@ -15,28 +15,14 @@ indexserver =
 [testenv]
 
 commands =
-    py.test --cov-config .coveragerc --cov {envsitepackagesdir}/dnvgl_framework \
+    py.test --cov-config .coveragerc --cov {envsitepackagesdir}/hcm \
          --cov-report term-missing --cov-report html --cov-report xml \
          --cov-report annotate --doctest-modules --capture=sys \
-         --junitxml=pytest_main.xml {envsitepackagesdir}/dnvgl_framework \
-         --pep8 {posargs}
+         --junitxml=pytest_main.xml {envsitepackagesdir}/hcm \
+         {posargs}
 
 deps =
     py
     pytest
     pytest-cov
     pytest-capturelog
-    pytest-pep8
-
-[testenv:py33]
-
-; `--pep8` failes with `2to3` converted code.
-commands =
-    py.test --cov-config .coveragerc --cov {envsitepackagesdir}/dnvgl_framework \
-         --cov-report term-missing --cov-report html --cov-report xml \
-         --cov-report annotate --doctest-modules --capture=sys \
-         --junitxml=pytest_main.xml {envsitepackagesdir}/dnvgl_framework \
-         {posargs}
-
-deps =
-    {[testenv]deps}
