Improved documetation generation.
git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@103 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,14 +1,14 @@
-# Copyright (C) 2010 by DNV GL SE
+# -*- coding: utf-8 -*-
 
-# ======================================================================
-# Task      Generate documentation for DNVGLPyFramework.
-#           Makefile for Sphinx documentation
-# ----------------------------------------------------------------------
-# Author    Berthold Höllmann <hoel@GL-Group.com>
-# Project   GLPyFramwork
-# ======================================================================
+# Copyright © 2010 by DNV GL SE
 
-# CVSID: $Id$
+# Generate documentation for DNVGLPyFramework.
+# Makefile for Sphinx documentation.
+
+# ID: $Id$"
+# $Date$
+# $Revision$
+# Author Berthold Höllmann <berthold.hoellmann@dnvgl.com>
 
 SHELL = /bin/sh
 
@@ -200,8 +200,8 @@ doctest:
 .PHONY: doctest
 
 # Local Variables:
-# mode: makefile
-# ispell-local-dictionary: "english"
-# compile-command: "make html"
-# coding: utf-8
+# mode: make
+# mode: flymake
+# ispell-local-dictionary:"english"
+# compile-command:"make html"
 # End:
