--- a/tox.ini
+++ b/tox.ini
@@ -15,10 +15,10 @@ indexserver =
 [testenv]
 
 commands =
-    py.test --cov-config .coveragerc --cov {envsitepackagesdir}/hcm \
+    py.test --cov-config .coveragerc --cov {envsitepackagesdir}/dnvgl_framework \
          --cov-report term-missing --cov-report html --cov-report xml \
          --cov-report annotate --doctest-modules --capture=sys \
-         --junitxml=pytest_main.xml {envsitepackagesdir}/hcm \
+         --junitxml=pytest_main.xml {envsitepackagesdir}/dnvgl_framework \
          {posargs}
 
 deps =
