Finished reorganizing of code layout.
git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@113 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/tox.ini
+++ b/tox.ini
@@ -15,10 +15,14 @@ indexserver =
 [testenv]
 
 commands =
-    py.test --cov-config .coveragerc --cov {envsitepackagesdir}/dnvgl_framework \
+    py.test --cov-config .coveragerc \
+         --cov {envsitepackagesdir}/dnvgl/framework \
+         --cov {envsitepackagesdir}/dnvgl/setup_utils \
          --cov-report term-missing --cov-report html --cov-report xml \
          --cov-report annotate --doctest-modules --capture=sys \
-         --junitxml=pytest_main.xml {envsitepackagesdir}/dnvgl_framework \
+         --junitxml=pytest_main.xml \
+         {envsitepackagesdir}/dnvgl/framework \
+         {envsitepackagesdir}/dnvgl/setup_utils \
          {posargs}
 
 deps =
