Exclude `.eggs' from distribution.
git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@115 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,3 +5,4 @@ recursive-include doc *.py
 recursive-include doc *.rst
 recursive-include doc Makefile
 recursive-include test Makefile
+exclude .eggs
