--- a/tox.ini
+++ b/tox.ini
@@ -5,12 +5,12 @@
 
 [tox]
 
-envlist = py27,py33,py34
+envlist = py27,py34
 
 skip_missing_interpreters = True
 
 indexserver =
-    default = http://srverc.germanlloyd.org/devpi/root/pypi/+simple
+    default = http://srverc.germanlloyd.org/devpi/root/dist/+simple/
 
 [testenv]
 
