Improved version and dependency handling.
git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@138 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/test/Makefile
+++ b/test/Makefile
@@ -70,7 +70,7 @@ clean:
 vpath %.py $(shell $(FINDDIR)find .. -type d|grep -v .svn)
 
 # Local Variables:
-# mode: make
+# mode: makefile
 # ispell-local-dictionary:"english"
 # compile-command:"make test"
 # End:
