Use user install in doc generation.
git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@142 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -181,7 +181,7 @@ doctest:	library
 	      "results in $(BUILDDIR)/doctest/output.txt."
 
 library:
-	pip install sphinx numpydoc
+	pip install --user sphinx numpydoc
 
 .PHONY: help
 .PHONY: clean
