--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ commands =
          --cov {envsitepackagesdir}/dnvgl/setup_utils \
          --cov-report term-missing --cov-report html --cov-report xml \
          --cov-report annotate --doctest-modules --capture=sys \
-         --junitxml=pytest_main.xml \
+         --junitxml=pytest_main.xml --pep8 \
          {envsitepackagesdir}/dnvgl/framework \
          {envsitepackagesdir}/dnvgl/setup_utils \
          {posargs}
@@ -26,4 +26,5 @@ deps =
     py
     pytest
     pytest-cov
+    pytest-pep8
     pytest-capturelog
