Summary: Provide install_command for tox
git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@185 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,8 @@ skip_missing_interpreters = True
 
 [testenv]
 
+install_command = pip install --find-links=./wheelhouse {opts} {packages}
+
 commands =
     py.test --cov-config .coveragerc \
          --cov {envsitepackagesdir}/dnvgl/framework \
