--- a/tox.ini
+++ b/tox.ini
@@ -25,8 +25,8 @@ commands =
          {posargs}
 
 deps =
-    py
     pytest
     pytest-cov
     pytest-pep8
     pytest-capturelog
+    packaging
