Summary: Package can't use itself for installation
git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@188 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/tox.ini
+++ b/tox.ini
@@ -7,9 +7,10 @@
 
 envlist = py27,py34
 
-skip_missing_interpreters = True
+skip_missing_interpreters = true
 
 [testenv]
+
 
 install_command = pip install --find-links=./wheelhouse {opts} {packages}
 
@@ -29,4 +30,4 @@ deps =
     pytest-cov
     pytest-pep8
     pytest-capturelog
-    packaging
+    -r{toxinidir}/requirements.txt
