Summary: Improved tox testing
git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@189 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/tox.ini
+++ b/tox.ini
@@ -11,8 +11,9 @@ skip_missing_interpreters = true
 
 [testenv]
 
-
 install_command = pip install --find-links=./wheelhouse {opts} {packages}
+
+pip_pre=True
 
 commands =
     py.test --cov-config .coveragerc \
@@ -30,4 +31,5 @@ deps =
     pytest-cov
     pytest-pep8
     pytest-capturelog
-    -r{toxinidir}/requirements.txt
+    teamcity-messages
+    --requirement={toxinidir}/requirements.txt
