--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,32 @@
 [wheel]
 universal = 1
+
+[aliases]
+test=pytest
+
+[tool:pytest]
+minversion = 3.0
+
+addopts = --verbose --verbose --verbose
+        --cov-config .coveragerc
+        --cov dnvgl
+        --cov-report term-missing
+        --cov-report html
+        --cov-report xml
+        --cov-report annotate
+        --doctest-modules
+        --capture=no
+        --junitxml=pytest_main.xml
+        --pep8
+        --ignore=doc
+        --ignore=build_exe
+        --ignore=.svn
+        --ignore=.venv
+        --ignore=data
+        --ignore=htmlcov
+        --ignore=__pycache__
+
+# Local Variables:
+# mode: conf
+# compile-command: "python setup.py test"
+# End:
