Summary: Added release helper script.
git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@193 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,7 @@ commands =
          {envsitepackagesdir}/dnvgl/framework \
          {envsitepackagesdir}/dnvgl/setup_utils \
          {posargs}
+  {envpython} setup.py bdist_wheel bdist_egg
 
 deps =
     pytest
