Summary: Fixed library installation for documentation generation.
git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@196 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -181,7 +181,11 @@ doctest:	library
 	      "results in $(BUILDDIR)/doctest/output.txt."
 
 library:
+ifndef VIRTUAL_ENV
 	pip install --user sphinx numpydoc
+else
+	pip install sphinx numpydoc
+endif
 
 .PHONY: help
 .PHONY: clean
