Summary: Fixed directory name for doc build.
git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@198 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -19,7 +19,7 @@ DOC_DIR=/export/WWW-Intern/htdocs/pool/ho/software/info/DNVGLPyFramwork
 SPHINXOPTS    = -w sphinx-build.log
 SPHINXBUILD   = sphinx-build
 PAPER         = a4
-BUILDDIR      = _build
+BUILDDIR      = build
 
 # Internal variables.
 PAPEROPT_a4     = -D latex_paper_size=a4
