Summary: Add utility to generate binary executables
Added module `build_exe` to `setup_utils`. The module allows
generation of binary executables from python scripts from `setup.py`.


git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@201 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,21 @@ addopts = --verbose --verbose --verbose
         --ignore=htmlcov
         --ignore=__pycache__
 
+[isort]
+known_first_party=gl,BasePyBrush,StiffOnPlate,dnvgl,hcm,readais,numdiff,_shipLoad,_spsolve,numfort,amls_helper,priefaslib,SXFPyBase,iuw
+known_third_party=PyInstaller
+indent='    '
+multi_line_output=4
+length_sort=1
+default_section=FIRSTPARTY
+balanced_wrapping=True
+import_heading_stdlib=Standard libraries.
+import_heading_thirdparty=Third party libraries.
+import_heading_firstparty=DNV GL libraries.
+known_standard_library=setuptools,cmath,stat,types,strop,_locale
+force_to_top=setuptools
+use_parentheses=1
+
 # Local Variables:
 # mode: conf
 # compile-command: "python setup.py test"
