Trying to fix TeamCity build errors.
git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@207 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include Makefile
 include tox.ini
 include *.txt
+recursive-include lib *.py
 recursive-include doc *.py
 recursive-include doc *.rst
 recursive-include doc Makefile
