--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,26 @@
+# -*- coding: utf-8 -*-
+
+[metadata]
+
+license = Other/Proprietary License
+keywords = DNVGL Framework setup helper
+description=Lightweight framwork for DNV GL Python applications.
+author = Berthold Höllmann, DNV GL SE
+author_email = berthold.hoellmann@dnvgl.com
+url = http://www.dnvgl.com
+platforms =
+    Linux
+    Windows
+classifiers =
+    Development Status :: 6 - Mature
+    Intended Audience :: Developers
+    Operating System :: POSIX
+    Operating System :: Microsoft :: Windows
+    Topic :: Software Development :: Libraries
+    Topic :: Utilities
+    Programming Language :: Python
+    Programming Language :: Python :: 3
+
 [wheel]
 universal = 1
 
