--- a/tox.ini
+++ b/tox.ini
@@ -17,13 +17,11 @@ pip_pre=True
 
 commands =
     py.test --cov-config .coveragerc \
-         --cov {envsitepackagesdir}/dnvgl/framework \
-         --cov {envsitepackagesdir}/dnvgl/setup_utils \
+         --cov {envsitepackagesdir}/dnvgl \
          --cov-report term-missing --cov-report html --cov-report xml \
          --cov-report annotate --doctest-modules --capture=sys \
          --junitxml=pytest_main.xml --pep8 \
-         {envsitepackagesdir}/dnvgl/framework \
-         {envsitepackagesdir}/dnvgl/setup_utils \
+         {envsitepackagesdir}/dnvgl \
          {posargs}
   {envpython} setup.py bdist_wheel bdist_egg
 
