Still trying to fix TeamCity run.
git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@209 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -30,7 +30,7 @@ I18NSPHINXOPTS  = $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) .
 
 export LATEXOPTS=--shell-escape
 
-export PYTHONPATH=../
+export PYTHONPATH=../lib
 
 MV = mv
 SED = sed
