Trying to fix `python setup.py test`.
git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@215 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,14 +22,16 @@ classifiers =
     Programming Language :: Python :: 3
 
 [wheel]
+
 universal = 1
 
 [aliases]
+
 test=pytest
 
 [tool:pytest]
-minversion = 3.0
 
+minversion = 3.0
 addopts = --verbose --verbose --verbose
         --cov-config .coveragerc
         --cov dnvgl
@@ -50,8 +52,7 @@ addopts = --verbose --verbose --verbose
         --ignore=__pycache__
 
 [isort]
-known_first_party=gl,BasePyBrush,StiffOnPlate,dnvgl,hcm,readais,numdiff,_shipLoad,_spsolve,numfort,amls_helper,priefaslib,SXFPyBase,iuw
-known_third_party=PyInstaller
+
 indent='    '
 multi_line_output=4
 length_sort=1
@@ -60,8 +61,32 @@ balanced_wrapping=True
 import_heading_stdlib=Standard libraries.
 import_heading_thirdparty=Third party libraries.
 import_heading_firstparty=DNV GL libraries.
-known_standard_library=setuptools,cmath,stat,types,strop,_locale
-force_to_top=setuptools
+known_standard_library=
+        setuptools
+        cmath
+        stat
+        types
+        strop
+        _locale
+known_third_party=
+        PyInstaller
+known_first_party=
+        gl
+        BasePyBrush
+        StiffOnPlate
+        dnvgl
+        hcm
+        readais
+        numdiff
+        _shipLoad
+        _spsolve
+        numfort
+        amls_helper
+        priefaslib
+        SXFPyBase
+        iuw
+force_to_top=
+        setuptools
 use_parentheses=1
 
 # Local Variables:
