Trying to fix TeamCity build.
git-svn-id: https://svnsrv/svn/DNVGLPyFramework/trunk@218 c98a7023-1c74-4c12-b3e7-2c1132d2d72c

--- a/tox.ini
+++ b/tox.ini
@@ -5,15 +5,13 @@
 
 [tox]
 
-envlist = py27,py34
+envlist = py27,py34,py36
 
 skip_missing_interpreters = true
 
 [testenv]
 
 install_command = pip install --find-links=./wheelhouse {opts} {packages}
-
-pip_pre=True
 
 commands =
     py.test --cov-config .coveragerc \
@@ -23,7 +21,7 @@ commands =
          --junitxml=pytest_main.xml --pep8 \
          {envsitepackagesdir}/dnvgl \
          {posargs}
-  {envpython} setup.py bdist_wheel bdist_egg
+    {envpython} setup.py bdist_wheel bdist_egg
 
 deps =
     pytest
